--- a/main.tex
+++ b/main.tex
@@ -551,6 +551,9 @@ title={References}
 
 \newpage
 \appendix
-\section*{Appendix A}
-\section*{Appendix B}
+
+\includepdf[pages=-,pagecommand=\thispagestyle{plain}]{Datasheets/Datasheet - futaba S3003.pdf}
+
+\includepdf[pages=-,pagecommand=\thispagestyle{plain}]{Datasheets/Datasheet - HC-SR04.pdf}
+
 \end{document}
